Use href for link not SRC.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -170,6 +170,7 @@
         <p>Note that you can set what Editoria11y should look for in your preferences file. By default it checks for PDF and DOC files.</p>
 
         <p class="positive"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ#.pdf" class="">A fake PDF link.</a></p>
+        <p class="positive"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ#2.pdf" class="">A fake PDF link with a different url.</a></p>
 
         <h3>Silent but interactive links</h3>
 
