Change restore hidden button to show hidden

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -350,6 +350,9 @@
             shadowComponents : 'shadow-test, shadow-test-no-hits',
             hiddenHandlers : '#hidden-handler',
             checkRoots : 'main',
+            showDismissed : true,
+            //allowOK: false,
+            //allowHide: false,
             //ignoreAllIfAbsent : 'maain',
             //ignoreAllIfPresent : 'main',
             //preventCheckingIfAbsent : 'maian',
