Add checkVisible option, change icon on dismissed alerts.

--- a/tests/warnings.htm
+++ b/tests/warnings.htm
@@ -25,6 +25,7 @@
             <script src="../js/ed11y-localization.js"></script>
             <script src="../js/ed11y-element-panel.js"></script>
             <script src="../js/ed11y-element-result.js"></script>
+            <script src="../js/ed11y-element-tip.js"></script>
             <script src="../js/ed11y-element-alt.js"></script>
             <script src="../js/ed11y-test-links.js"></script>
             <script src="../js/ed11y-test-images.js"></script>
