Separate hide and dismiss restores, new wording for dismissals.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -351,6 +351,7 @@
             hiddenHandlers : '#hidden-handler',
             checkRoots : 'main',
             showDismissed : true,
+            // syncedDismissals : {},
             //allowOK: false,
             //allowHide: false,
             //ignoreAllIfAbsent : 'maain',
