Restore missing assertive auto-alert functionality.

--- a/tests/warnings.htm
+++ b/tests/warnings.htm
@@ -36,9 +36,10 @@
             <!-- Instantiate-->
             <script>
                 const ed11y = new Ed11y({
-                    alertMode : 'polite',
+                    alertMode : 'assertive',
                     shadowComponents : 'shadow-test, shadow-test-no-hits', 
                     checkRoots : 'body', 
+                    showDismissed : false,
                 });
             </script>
             
