Show Dismissed param forces panel open.

--- a/tests/warnings.htm
+++ b/tests/warnings.htm
@@ -39,7 +39,7 @@
                     alertMode : 'assertive',
                     shadowComponents : 'shadow-test, shadow-test-no-hits', 
                     checkRoots : 'body', 
-                    showDismissed : false,
+                    showDismissed : true,
                 });
             </script>
             
