--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -348,7 +348,7 @@
           const ed11y = new Ed11y({
             alertMode : 'assertive',
             lang : 'en',
-            theme : 'lightTheme',
+            //theme : 'lightTheme',
             outlineExclude : '.utility',
             linkIgnoreStrings: '\(opens in new window\)',
             embeddedContent: '#embed',
