Move style tag to body, add parameter to detect placeholder alts.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -24,6 +24,9 @@
             <div class="positive">empty alt
                 <h4><img alt="" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 240 120'%3E%3Crect width='240' height='120' fill='%23cccccc'%3E%3C/rect%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='monospace' font-size='26px' fill='%23333333'%3EImage%3C/text%3E%3C/svg%3E" ></h4>
             </div>
+            <div class="positive">placeholder alt
+              <h4><img alt="This image has an empty alt attribute; it's filename is image.jpg" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 240 120'%3E%3Crect width='240' height='120' fill='%23cccccc'%3E%3C/rect%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='monospace' font-size='26px' fill='%23333333'%3EImage%3C/text%3E%3C/svg%3E" ></h4>
+          </div>
             <div class="positive">null alt
                 <h4><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 240 120'%3E%3Crect width='240' height='120' fill='%23cccccc'%3E%3C/rect%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='monospace' font-size='26px' fill='%23333333'%3EImage%3C/text%3E%3C/svg%3E"></h4>
             </div>
@@ -357,6 +360,7 @@
             hiddenHandlers : '#hidden-handler',
             checkRoots : 'main',
             showDismissed : true,
+            altPlaceholder: 'This image has an empty alt attribute;',
             // syncedDismissals : {},
             //allowOK: false,
             //allowHide: false,
