Remove double-hit on deadspace alts in images.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -169,7 +169,7 @@
 
         <p class="positive"><a  href="https://www.youtube.com/watch?v=DLzxrzFCyOs" target="_blank">An informative video.</a></p>
 
-        <p class="negative">Link with inner download icon with aria-label: <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs" target="_blank">Click here <span aria-label="download">^</span></a></p>
+        <p class="negative">Link with inner download icon with aria-label: <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs" target="_blank">Aria label on inner span <span aria-label="download">^</span></a></p>
 
         <p class="negative"><a  href="https://www.youtube.com/watch?v=DLzxrzFCyOs" target="_blank">An informative video (opens in new window).</a></p>
 
@@ -184,7 +184,7 @@
 
         <p class="todo-positive"><a href="#" aria-hidden="true">Aria-hidden links without a negative tabindex.</a></p>
 
-        <p class="todo-positive"><a href="#"><span aria-hidden="true">Link with all text content aria-hidden.</span></a></p>
+        <p class="positive"><a href="#"><span aria-hidden="true">Link with all text content aria-hidden.</span></a></p>
 
         <p class="positive"><a href="#"><img alt="" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 240 120'%3E%3Crect width='240' height='120' fill='%23cccccc'%3E%3C/rect%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='monospace' font-size='26px' fill='%23333333'%3EImage%3C/text%3E%3C/svg%3E">
         </a> linked image with empty alt.</p>
