Naming bug in links, two A paragraphs in a row false positive

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -240,6 +240,7 @@
         <div class="negative"><p>Appeal</p></div>
         <div class="negative"><p>Apple</p></div>
         <div class="negative"><p>Bear</p></div>
+        <div class="negative"><p>A Bear</p><p>A turtle</p></div>
         <div><p class="positive">🥑 Fake lists with emoji</p><p class="negative">🍅 Oh tomato...</p><p class="negative">🦄 Shiny Unicorn</p>
           <p class="positive">⊙ Math symbol</p><p class="negative">⊙ Detect on repeat</p>
           <p class="positive">🚜 Now emoji again, with a line break<br>🛵 Any other emoji</p>
