Convert results array to object, enable custom tests.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -160,6 +160,7 @@
         <p>“Click here,” “learn more,” “download,” etc.</p>
 
         <p class="positive"><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Click here</a></p>
+        <p class="positive"><a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">More</a></p>
 
         <p class="positive">Link with ignored substring: <a href="https://www.youtube.com/watch?v=DLzxrzFCyOs">Click here (opens in new window)</a></p>
 
