--- a/tests/utilities.htm
+++ b/tests/utilities.htm
@@ -50,6 +50,11 @@
                 </span>
               </h3>
 
+            <h3>Link with ignored text</h3>
+            <div class="positive">
+                <a href="#foo">Click here <span class="ignore-class">ignoreme</span></a>
+            </div>
+
             <h3>Aria:hidden image</h3>
             <div class="negative"><div aria-hidden="true">
                 <img alt="" src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 240 120'%3E%3Crect width='240' height='120' fill='%23cccccc'%3E%3C/rect%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='monospace' font-size='26px' fill='%23333333'%3EImage%3C/text%3E%3C/svg%3E" >
@@ -189,6 +194,7 @@
                     linkIgnoreStrings: '\(link is external\)',
                     customTests : 2,
                     theme: 'sleekTheme',
+                    linkIgnoreSelector : '.ignore-class',
                 });
             </script>
             
