Abstract out the font sizes.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -383,6 +383,7 @@
           const ed11y = new Ed11y({
             alertMode : 'assertive',
             lang : 'en',
+            baseFontSize: 16,
             //theme : 'lightTheme',
             outlineExclude : '.utility',
             linkIgnoreStrings: /\(opens in new window\)|download/,
