--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -222,6 +222,8 @@
 
         <table class="positive"><tbody><tr><td>A table without a TH header is invalid</td><td class="positive"><h4 >Outline headers do not count</h4></td><td class="negative"><p><strong>Disable should be content header test inside tables</strong></p></td></tr></tbody></table>
 
+        <table class="negative" role="presentation"><tr><td>No table header, but table has role="presentation."</td></tr></table>
+
         <h3 id="empty-table-header-cells">Empty table header cells</h3>
 
         <table><tbody><tr><th>Empty table heading cells will also be flagged:</th><th class="positive"> &nbsp;</th></tr></tbody></table>
