Fix list false positives on tables and numbers.

--- a/tests/all_tests.htm
+++ b/tests/all_tests.htm
@@ -224,6 +224,29 @@
 
         <table class="negative" role="presentation"><tr><td>No table header, but table has role="presentation."</td></tr></table>
 
+        <table class="negative"><thead>
+        <tr>
+            <th><p>Numbers in tables</p></th>
+            <th><p>Should not be checked for lists</p>
+            </th>
+        </tr>
+        </thead>
+            <tbody>
+            <tr>
+                <th>   <p>1.</p>
+                </th>
+                <td>   <p>2. Turtles</p>
+                </td>
+            </tr>
+            <tr>
+                <th>   <p>2.</p>
+                </th>
+                <td>   <p>Bears</p>
+                </td>
+
+            </tr>
+            </tbody>
+        </table>
         <h3 id="empty-table-header-cells">Empty table header cells</h3>
 
         <table><tbody><tr><th>Empty table heading cells will also be flagged:</th><th class="positive"> &nbsp;</th></tr></tbody></table>
@@ -240,15 +263,16 @@
           (b) banana<br>
           (c) pear</p></div>
         <div>
-            <p class="positive">1. This is split</p>
-            <hr><p>2. with HR</p>
-            <hr><p>3. but non-contiguous p are detected.</p>
+            <p class="positive">1 This is split</p>
+            <hr><p>2 with HR</p>
+            <hr><p>3 but non-contiguous p are detected.</p>
         </div>
         <div>
           <p class="positive">(1) A parenthesis list</p>
           <p class="negative">(2) Two</p>
           <p>(3) Three</p>
         </div>
+        <div class="negative"><p>B bear.</p><p>A turtle.</p></div>
         <div class="negative"><p>Apple</p></div>
         <div class="negative"><p>Appeal</p></div>
         <div class="negative"><p>Apple</p></div>
@@ -258,6 +282,14 @@
         <div><p class="positive">🥑 Fake lists with emoji</p><p class="negative">🍅 Oh tomato...</p><p class="negative">🦄 Shiny Unicorn</p>
           <p class="positive">⊙ Math symbol</p><p class="negative">⊙ Detect on repeat</p>
           <p class="positive">🚜 Now emoji again, with a line break<br>🛵 Any other emoji</p>
+        </div>
+        <div class="negative"><p>11</p><p>12</p></div>
+        <div class="negative"><p>1 thing</p><p>20 things</p></div>
+        <div class="negative"><p>10 things</p><p>20 things</p></div>
+        <div class="negative"><p>1 thing</p><p>1 thing</p></div>
+        <div><p class="positive">🥑 Fake lists with emoji</p><p class="negative">🍅 Oh tomato...</p><p class="negative">🦄 Shiny Unicorn</p>
+            <p class="positive">⊙ Math symbol</p><p class="negative">⊙ Detect on repeat</p>
+            <p class="positive">🚜 Now emoji again, with a line break<br>🛵 Any other emoji</p>
         </div>
 
         <div class="positive"><p>1. This has rich text after the BR<br><a href="#"><strong>2.</strong> Fancy.</a></p></div>
